Refactor project structure by moving inline styles and scripts to separate CSS and JS files for improved maintainability and organization

--- a/index.html
+++ b/index.html
@@ -4,217 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focus Display</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .container {
-            text-align: center;
-            padding: 2rem;
-            max-width: 90%;
-        }
-
-        .goal-display {
-            font-size: 4rem;
-            font-weight: 700;
-            color: white;
-            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-            min-height: 200px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 2rem;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        .goal-text {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: slideIn 0.8s ease-out forwards;
-        }
-
-        @keyframes slideIn {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        .no-goals {
-            color: white;
-            font-size: 1.5rem;
-            opacity: 0.8;
-        }
-
-        /* Responsive design */
-        @media (max-width: 768px) {
-            .goal-display {
-                font-size: 2.5rem;
-                min-height: 150px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .goal-display {
-                font-size: 1.8rem;
-                padding: 1rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="goal-display">
-            <div class="goal-text" id="goalText">Loading...</div>
+        <div class="card-display" id="cardDisplay">
+            <div class="card-content">
+                <div class="card-title">Loading...</div>
+            </div>
         </div>
     </div>
 
-    <script>
-        // Parse URL parameters
-        function getGoalsFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            const goalsParam = params.get('goals');
-
-            if (!goalsParam) {
-                return [];
-            }
-
-            return goalsParam.split('|').map(goal => goal.trim()).filter(goal => goal.length > 0);
-        }
-
-        // Get Trello parameters from URL
-        function getTrelloParams() {
-            const params = new URLSearchParams(window.location.search);
-            return {
-                listId: params.get('listId'),
-                apiKey: params.get('apiKey'),
-                token: params.get('token')
-            };
-        }
-
-        // Fetch cards from Trello
-        async function fetchTrelloCards(listId, apiKey, token) {
-            try {
-                const url = `https://api.trello.com/1/lists/${listId}/cards?key=${apiKey}&token=${token}`;
-                const response = await fetch(url);
-
-                if (!response.ok) {
-                    throw new Error(`Trello API error: ${response.status} ${response.statusText}`);
-                }
-
-                const cards = await response.json();
-                return cards.map(card => card.name);
-            } catch (error) {
-                console.error('Error fetching Trello cards:', error);
-                return [];
-            }
-        }
-
-        // Initialize goals
-        async function initializeGoals() {
-            const trelloParams = getTrelloParams();
-
-            // Check if Trello parameters are provided
-            if (trelloParams.listId && trelloParams.apiKey && trelloParams.token) {
-                const trelloCards = await fetchTrelloCards(
-                    trelloParams.listId,
-                    trelloParams.apiKey,
-                    trelloParams.token
-                );
-
-                if (trelloCards.length > 0) {
-                    goals = trelloCards;
-                } else {
-                    goals = ['Error loading Trello cards. Check console for details.'];
-                }
-            } else {
-                // Fall back to URL goals parameter
-                goals = getGoalsFromURL();
-            }
-
-            // Initialize display
-            displayGoal();
-            if (goals.length > 1) {
-                startRotation();
-            }
-        }
-
-        // App state
-        let goals = [];
-        let currentIndex = 0;
-        let rotationInterval = null;
-        const ROTATION_TIME = 5000; // 5 seconds per goal
-
-        // Elements
-        let goalText = document.getElementById('goalText');
-
-        // Display current goal
-        function displayGoal() {
-            if (goals.length === 0) {
-                goalText.innerHTML = '<div class="no-goals">No goals set.<br><br>Add ?goals=goal1|goal2|goal3<br>or<br>?listId=YOUR_LIST_ID&apiKey=YOUR_API_KEY&token=YOUR_TOKEN</div>';
-                return;
-            }
-
-            // Reset animation by removing and re-adding the element
-            const parent = goalText.parentNode;
-            const clone = goalText.cloneNode(false);
-            clone.textContent = goals[currentIndex];
-            parent.replaceChild(clone, goalText);
-
-            // Update reference to the new element
-            goalText = clone;
-        }
-
-        // Start rotation
-        function startRotation() {
-            if (goals.length <= 1) return;
-
-            stopRotation();
-
-            rotationInterval = setInterval(() => {
-                nextGoal();
-            }, ROTATION_TIME);
-        }
-
-        // Stop rotation
-        function stopRotation() {
-            if (rotationInterval) {
-                clearInterval(rotationInterval);
-                rotationInterval = null;
-            }
-        }
-
-        // Next goal
-        function nextGoal() {
-            currentIndex = (currentIndex + 1) % goals.length;
-            displayGoal();
-        }
-
-        // Initialize
-        initializeGoals();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
