Add datetime display with Hijri date support and update styles for improved visibility

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="header">
+        <div class="datetime-display" id="datetimeDisplay">
+            <div class="day-date" id="dayDate">Loading...</div>
+            <div class="time" id="time">Loading...</div>
+        </div>
+    </header>
     <div class="container">
         <div class="card-display" id="cardDisplay">
             <div class="card-content">
